welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:12: error: too many arguments for method droite: ()Unit
	droite();avance(2);droite(2);
                                 ^